tests/setup.ts
// Test setup file
// Add any global test configuration here

// Extend Jest matchers if needed
// import 'jest-extended'

// Global test utilities
global.console = {
  ...console,
  // Uncomment to suppress console.log during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
}
